--- a/.github/workflows/update_workflows.yml
+++ b/.github/workflows/update_workflows.yml
@@ -258,4 +258,4 @@ jobs:
         run: |
           git add .github/workflows/manifest1.yml
           git commit -m "Update workflow files from central template" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}.git HEAD:main || echo "No changes to push"
+          git push https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main || echo "No changes to push"
