--- a/.github/workflows/update_workflows.yml
+++ b/.github/workflows/update_workflows.yml
@@ -84,6 +84,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .github/workflows/01-build-and-deploy.yml .github/workflows/02-manual-deploy.yml .github/workflows/03-monthly-patching.yml
+          git add .github/workflows/template.yml
           git commit -m "Update workflow files from central repository" || echo "No changes to commit"
           git push https://x-access-token:${{ secrets.PERSONAL_AACCESS_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main || echo "No changes to push"
