--- a/.github/workflows/update_workflows.yml
+++ b/.github/workflows/update_workflows.yml
@@ -40,7 +40,7 @@
 #         uses: ad-m/github-push-action@v0.6.0
 #         with:
 #           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-#           branch: main
+#           branch: mai
 
 
 name: Update Workflows
