--- a/.github/workflows/update_workflows.yml
+++ b/.github/workflows/update_workflows.yml
@@ -86,4 +86,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .github/workflows/template.yml
           git commit -m "Update workflow files from central repository" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.PERSONAL_AACCESS_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main || echo "No changes to push"
+          git push https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main || echo "No changes to push"
